# mlops-zoomcamp-vrn

./: .gitignore  README.md  pyproject.toml
01-intro/: duration-prediction.ipynb
02-experiment-tracking/: duration-prediction.ipynb
02-experiment-tracking/homework/: hpo.py  register_model.py  train.py
03-orchestration/dagster_conf/: dagster.yaml  requirements.txt
03-orchestration/pipeline/: repo.py  requirements.txt
04-deployment/homework/: starter.ipynb
04-deployment/homework/batch/: score.ipynb  score.py
05-monitoring/: evidently_metrics_calculation.py
05-monitoring/config/: grafana_datasources.yaml
05-monitoring/dashboards/: My_Dashboard.json
06-best-practices/homework/: batch.py
06-best-practices/homework/tests/: integration_test.py  test_batch.py
docker/: MLOps_DataTalks.yml  MLOps_local.yml  dagster.Dockerfile  init_db.sh
