[project]
name = "mlops-zoomcamp-vrn"
version = "0.1.0"
description = ""
authors = [
    {name = "Valery Rabinin",email = "valery.ryabinin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (==3.9.4)",
    "matplotlib-inline (>=0.1.7,<0.2.0)",
    "pyarrow (>=20.0.0,<21.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
